[US99] Urgent task: mail template for private Room event + new properties in influencers statistics